tdf#107340 - Incorrect undo label with Track Changes set

Override the GetRewriter() function for the class SwUndoRedlineDelete

Change-Id: I4f7080d9d8eb79757e3e915b51f157bee29e9334